--- a/package.json
+++ b/package.json
@@ -7,19 +7,24 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
+    "@types/node": "^17.0.4",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "enzyme": "^3.11.0",
+    "jest": "^27.4.5",
+    "jest-fetch-mock": "^3.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "ts-jest": "^27.0.0",
+    "ts-node": "^10.4.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest --config jestconfig.json",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -39,5 +44,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.16.5",
+    "@types/enzyme": "^3.10.10"
   }
 }
