--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "ts-jest": "^27.0.0",
     "ts-node": "^10.4.0",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "zustand": "^3.6.8"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -47,6 +48,7 @@
   },
   "devDependencies": {
     "@babel/preset-env": "^7.16.5",
-    "@types/enzyme": "^3.10.10"
+    "@types/enzyme": "^3.10.10",
+    "@types/uniqid": "^5.3.2"
   }
 }
