--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "@types/node": "^17.0.4",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "enzyme": "^3.11.0",
     "jest": "^27.4.5",
     "jest-fetch-mock": "^3.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
     "ts-jest": "^27.0.0",
     "ts-node": "^10.4.0",
@@ -47,8 +47,6 @@
     ]
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.16.5",
-    "@types/enzyme": "^3.10.10",
-    "@types/uniqid": "^5.3.2"
+    "@babel/preset-env": "^7.16.5"
   }
 }
